# cpp-high-performance

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: ci.yml
Chapter01/: CMakeLists.txt  const_correctness.cpp
Chapter02/: CMakeLists.txt  exception_safety.cpp  lambda_capture.cpp
Chapter02/benchmarks/: CMakeLists.txt  lambda_vs_stdfunction_benchmark.cpp
Chapter03/: CMakeLists.txt
Chapter03/benchmarks/: CMakeLists.txt
Chapter04/: CMakeLists.txt  parallel_arrays.cpp  priority_queues.cpp  sum_scores.cpp
Chapter05/: CMakeLists.txt
Chapter05/benchmarks/: CMakeLists.txt
Chapter06/: CMakeLists.txt  string_view.cpp
Chapter07/: CMakeLists.txt  alignment.cpp
Chapter08/: CMakeLists.txt  constexpr_if_mod.cpp  constraints_and_concepts.cpp  point2d_concepts.cpp  safe_cast.cpp  template_class.cpp
Chapter09/: CMakeLists.txt  example_projections.cpp  optional.cpp  tuple_algorithms.cpp
Chapter10/: CMakeLists.txt  vec2d_length_proxy_tests.cpp
Chapter10/benchmarks/: CMakeLists.txt
Chapter11/: CMakeLists.txt
Chapter12/: CMakeLists.txt  generator_example.cpp
Chapter13/: CMakeLists.txt  asio_server.cpp  asio_timer_callback.cpp  asio_timer_coro.cpp  sync_wait.h
Chapter14/: CMakeLists.txt  copy_if.h  parallel_policy.cpp  reduce_foreach.cpp  transform_tests.cpp
Chapter14/benchmarks/: CMakeLists.txt
cmake/: dev-mode.cmake  variables.cmake
